@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.14-dev
 
+make sure that 'make distclean' cleans all the autogenerated files
+[Stas]
+
 make sure that if -maxclients option is passed on the command line,
 minclients will never be bigger than that value [Stas]
 
